[package]
name = "sfo-result"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/sfo-result.git"
description = "A simple Result type for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0"}
log = { version = "0.4.21", optional = true}

[features]
backtrace = ["anyhow/backtrace"]
