[package]
name = "sfo-result"
version = "0.2.10"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wugren/sfo-result.git"
description = "A simple Result type for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.25", optional = true}
serde = { version = "1.0.217", features = ["derive"], optional = true}

[features]
backtrace = []
log = ["dep:log"]
